--- a/enconstruccion.html
+++ b/enconstruccion.html
@@ -22,53 +22,7 @@
   </style>
   <title>Vinoteca: en Construcción</title>
 </head>
-
-<body>
-  <!-- barra de navegacion -->
-  <nav id="barra" class="navbar navbar-expand-lg">
-    <div class="container-fluid">
-      <div class="navbar-brand">
-        <img src="img/logo2.png" alt="logo vinoteca">
-      </div>
-      <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon">
-        </span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item align-self-center">
-            <a class="nav-link text-white" aria-current="page" href="index.html">
-              Inicio
-            </a>
-          </li>
-          <li class="nav-item align-self-center">
-            <a class="nav-link text-white" href="nosotros.html">
-              Nosotros
-            </a>
-          </li>
-          <li class="nav-item dropdown align-self-center">
-            <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
-              data-bs-toggle="dropdown" aria-expanded="false">
-              Elaboración
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="elaboraciontinto.html">Tinto </a></li>
-              <li><a class="dropdown-item" href="elaboracionblanco.html">Blanco</a></li>
-              <li><a class="dropdown-item" href="enconstruccion.html">Rosado</a></li>
-              <li><a class="dropdown-item" href="enconstruccion.html">Espumantes</a></li>
-            </ul>
-          </li>
-          <li class="nav-item align-self-center">
-            <a class="nav-link text-white" href="maridaje.html" tabindex="-1" aria-disabled="true">
-              Maridaje
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav><!-- barra de navegacion -->
+<body> 
   <header>
     <nav id="barra" class="navbar navbar-expand-lg">
       <div class="container-fluid">
@@ -157,9 +111,9 @@
                               required="required" data-error="Firstname is required."> </div>
                         </div>
                         <div class="col-md-12">
-                          <div class="form-group"> <label for="form_lastname">Apellido *</label> <input
-                              id="form_lastname" type="text" name="surname" class="form-control" placeholder="Apellido"
-                              required="required" data-error="Lastname is required."> </div>
+                          <div class="form-group"> <label for="form_lastname">Apellido *</label> <input id="form_lastname"
+                              type="text" name="surname" class="form-control" placeholder="Apellido" required="required"
+                              data-error="Lastname is required."> </div>
                         </div>
                       </div>
                       <div class="row">
@@ -170,9 +124,9 @@
                           </div>
                         </div>
                         <div class="col-md-6">
-                          <div class="form-group"> <label for="telefono">Telefono*</label> <input id="telefono"
-                              type="tel" name="telefono" placeholder="Telefono de contacto" class="form-control"
-                              required="required" data-error="Solo numeros"> </div>
+                          <div class="form-group"> <label for="telefono">Telefono*</label> <input id="telefono" type="tel"
+                              name="telefono" placeholder="Telefono de contacto" class="form-control" required="required"
+                              data-error="Solo numeros"> </div>
                         </div>
                         <div class="col-md-12">
                           <div class="form-group"> <label for="form_need">Motivo de tu contacto *</label> <select
@@ -187,7 +141,7 @@
                         <div class="col-12">
                           <div> <label for="comentario">Comentario</label>
                             <textarea id="comentario" class="form-control" placeholder="dfnvjdfjvdfv">
-                          </textarea>
+                                </textarea>
                           </div>
                         </div>
                       </div>
@@ -196,14 +150,15 @@
                 </div>
               </div>
               <div class="modal-footer">
+                <span class="requerido">* campos obligatorios</span>
                 <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
                 <button type="button" class="btn btn-success">Enviar</button>
               </div>
             </div>
           </div>
         </div>
-        <section name="contacto" class="row secciones">
-          <div class="col-sm-1 col-md-4 col-xl-4 text-center">
+        <section name="contacto" class="row w-100">
+          <div class="col-sm-12 col-md-4 col-xl-4 text-center">
             <h1 class="textoNeonRojo text-center">Contacto</h1>
             <button type="button" class="btn btn-danger mx-auto" data-bs-toggle="modal"
               data-bs-target="#formulario_contacto">
@@ -211,7 +166,7 @@
             </button>
           </div>
           <!-- fin de contacto -->
-          <div class="col-sm-1 col-md-4 col-xl-4">
+          <div class="col-sm-12 col-md-4 col-xl-4">
             <h1 class="textoNeonRojo text-center">En redes</h1>
             <div class="text-light h2 text-center">
               <a href=""> <i class="text-light fab fa-facebook"></i></a> :
@@ -221,24 +176,25 @@
               <a href=""> <i class="text-light fab fa-whatsapp"></i></a>
             </div>
           </div>
-          <div class="col-sm-1 col-md-4 col-xl-4">
+          <div class="col-sm-12 col-md-4 col-xl-4">
             <h1 class="textoNeonRojo text-center">+ Info</h1>
             <p>Proyecto1 RollingCode</p>
             <p>Herramientas: HTML, CSS, Bootstrap, Trello</p>
             <p>Año: 2021</p>
-            <div class="text-end">
-              <a class="btn btn-danger" href="#barra">
-                <p>Ir al cielo!</p>
-              </a>
-            </div>
           </div>
-
         </section>
-        <div class="col-12 text-center">
+        <div id="leyendafinal" class="col-12 text-center">
           <p>Vinoteca la ComarcaForce © 2021
             Beber con moderación. Prohibida su venta a menores de 18 años. </p>
+          <div class="align-content-end">
+            <a class="btn btn-danger" href="#barra" role="button">Ir al cielo!</a>
+          </div>
         </div>
       </div>
     </footer>
-
-</html>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"></script>
+  </body>
+  
+  </html>
