--- a/elaboracionblanco.html
+++ b/elaboracionblanco.html
@@ -25,7 +25,8 @@
   <nav id="barra" class="navbar navbar-expand-lg align-item-center">
     <div class="container-fluid">
       <div class="navbar-brand">
-        <img src="img/logo2.png" alt="logo vinoteca">
+        <a href="index.html">
+          <img src="img/logo2.png" alt="logo vinoteca"></a>
       </div>
       <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
