--- a/vinostintos.html
+++ b/vinostintos.html
@@ -26,7 +26,8 @@
 <nav id="barra" class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <div class="navbar-brand">
-      <img src="img/logo2.png" alt="logo vinoteca">
+      <a href="index.html">
+          <img src="img/logo2.png" alt="logo vinoteca"></a>
     </div>
     <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
