--- a/nosotros.html
+++ b/nosotros.html
@@ -108,7 +108,7 @@
         <div class="intro">
           <h2 class="text-center textoNeonRojo">Nuestro Equipo</h2>
           <p class="text-center">Comarca Force se formo en Junio del 2021 para realizar el primer proyecto practico del
-            Curso FullStack de RollingCode.</p>
+            Curso FullStack de RollingCode..</p>
         </div>
         <div class="row people d-flex justify-content-center">
           <div class="col-sm-12 col-md-6 col-lg-3 col-xl-2 item">
